--- a/Static/Css/variable.css
+++ b/Static/Css/variable.css
@@ -21,10 +21,7 @@
     --white-off: #f1f1f1;
     --white-off2: #f1dddd;
     --white-off3: #b2a1a1;
-    --navy: #113f67;
-    --navy-2: #113657ec;
-    --blue: #496fa8;
-    --sky: #6F2CF6;
+    --modal-bg: #1a161656;
 
 
 
