--- a/Static/Css/variable.css
+++ b/Static/Css/variable.css
@@ -11,14 +11,14 @@
     --primary-color: ;
     --secondy-color: ;
     --primary-hover: ;
-    --gray: #CFE7D9;
-    --dark: #001e2b;
+    --gray: #7c7c7c;
+    --dark: #1b2023;
     --dark-hover: #0b1215;
     --green: #0aad0a;
     --green-dark: #099309;
     --orange: #FFC107;
     --white: #fff;
-    --white-off: #f1f1f1;
+    --white-off: #f3f3f3;
     --white-off2: #f1dddd;
     --white-off3: #b2a1a1;
     --modal-bg: #1a161656;
