--- a/Static/Css/component.css
+++ b/Static/Css/component.css
@@ -166,28 +166,124 @@ body {
 
 
 
+/*___________||  Button Start Here  ||___________ */
+.my-btn,.my-btn-sm {
+    cursor: pointer;
+    user-select: none;
+    font-size: var(--fs-lg);
+    padding: 13px 17px;
+    font-family: var(--font-inter);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: var(--fw-500);
+    font-family: inherit;
+    border-radius: 3px;
+    transition: .15s linear;
+    position: relative;
+    overflow: hidden;
+}
 
-/* From Uiverse.io by Maximinodotpy */
+.my-btn::after,
+.my-btn-sm::after{
+    content: '';
+    width: 100%;
+    height: 0;
+    background-color: #363030;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    transition: .2s linear;
+    transform: translateY(-32px);
+}
+.my-btn span,.my-btn-sm span{
+    position: relative;
+    z-index: 4;
+}
+.my-btn:hover::after,
+.my-btn-sm:hover::after{
+    height: 100%;
+    transform: translateY(0px);
+    transition: .15s linear;
+}
+.my-btn:focus,.my-btn:active{
+    outline: 3px solid rgba(255, 0, 0, 0.439);
+}
+
+.my-btn.my-btn-fill{
+    background-color: #201919;
+    color: var(--white);
+}
+.my-btn.my-btn-pill{
+    border-radius: var(--radius-pill);
+    padding: 13px 26px;
+}
+
+.my-btn.my-btn-outline{
+    border: 1px solid var(--white-off);
+}
+.my-btn.my-btn-sm{
+    padding:7px 12px;
+    font-size: var(--fs-sm);
+}
+.my-btn.my-btn-full{
+    width:100%;
+}
+
+/*___________||  Input Start Here  ||___________ */
 .my-input-group {
     position: relative;
     margin: 5px 0;
 }
 
 .my-input-group input {
-    padding: 9px 12px;
+    padding: 11px 14px;
     border: 1px solid #f2f2f2;
     outline: none;
     border-radius: 4px;
-    transition: .1s linear;
+    transition: .12s linear;
     font-family: inherit;
+    max-width: 450px;
+}
+
+.my-input-group input::placeholder {
+    font-weight: var(--fw-500);
 }
 
 .my-input-group input:focus {
     outline: 3px solid #b3b2b27c;
+    padding-left: 20px;
 }
 
+.my-input-group .label {
+    position: absolute;
+    left: 25px;
+    top: -12px;
+    background-color: var(--white);
+    padding: 2px 6px;
+    z-index: 2;
+    color: var(--gray);
+    cursor: pointer;
+    font-size: var(--fs-md);
+    user-select: none;
+    transition: .12s linear;
+}
 
+.my-input-group input:focus+.label {
+    top: -16px;
+}
 
+.my-input-group .error-text {
+    display: none;
+    font-size: var(--fs-sm);
+    color: red;
+}
+
+/* add this class when error */
+.my-input-group .error-text.error-text-show {
+    display: block;
+}
 
 
 /*___________||  Video Play Animation Start Here  ||___________ */
@@ -293,9 +389,13 @@ body {
     height: 100%;
     z-index: 6;
     background-color: var(--modal-bg);
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
+}
+
+.my-modal.active {
+    display: flex;
 }
 
 .my-modal.active .modal-content {
@@ -316,6 +416,7 @@ body {
     transform: scale(0);
     transition-delay: .5s;
     transition: transform .2s linear;
+    border: 1px solid var(--white-off)
 }
 
 .my-modal .modal-body {
