--- a/Static/Css/component.css
+++ b/Static/Css/component.css
@@ -1,10 +1,9 @@
 @import url('./variable.css');
 
-body {
-    padding: 55px;
-}
 
-/*___________||  Tooltip Start Here  ||___________ */
+/*_________________________________*\
+  ||     Tooltip  Start Here     ||
+\*_________________________________*/
 .my-tooltip {
     position: relative;
 }
@@ -49,10 +48,30 @@ body {
 
 
 
+/*__________________________________*\
+  ||     Dropdown Styles Here     ||
+\*__________________________________*/
+.my-dropdown {
+    border-radius: 4px;
+    box-shadow: var(--shadow-2);
+    border: 1px solid var(--white-off);
+    max-height: 500px;
+    overflow: auto;
+    overflow-x: hidden;
+}
+
+.my-dropdown li {
+    width: 100%;
+}
 
 
 
-/*___________||  Notification Start Here  ||___________ */
+
+
+
+/*_____________________________________*\
+  ||     Notification Styles Here     ||
+\*_____________________________________*/
 .notification {
     position: fixed;
     bottom: 20px;
@@ -86,7 +105,9 @@ body {
 
 
 
-/*___________||  Card Start Here  ||___________ */
+/*______________________________*\
+  ||     Card  Start Here     ||
+\*______________________________*/
 .my-card {
     position: relative;
     overflow: hidden;
@@ -94,6 +115,7 @@ body {
     box-shadow: var(--shadow-1);
     border: 1px solid var(--white-off);
     background-color: var(--white);
+    padding: 16px;
 }
 
 
@@ -102,7 +124,9 @@ body {
 
 
 
-/*___________||  Spinner Start Here  ||___________ */
+/*_______________________________*\
+  ||     Spinner  Start Here     ||
+\*_______________________________*/
 .my-spinner,
 .my-spinner div {
     box-sizing: border-box;
@@ -166,8 +190,11 @@ body {
 
 
 
-/*___________||  Button Start Here  ||___________ */
-.my-btn,.my-btn-sm {
+/*_______________________________*\
+  ||     Button  Start Here     ||
+\*_______________________________*/
+.my-btn,
+.my-btn-sm {
     cursor: pointer;
     user-select: none;
     font-size: var(--fs-lg);
@@ -179,66 +206,81 @@ body {
     font-weight: var(--fw-500);
     font-family: inherit;
     border-radius: 3px;
-    transition: .15s linear;
+    transition: .3s linear;
     position: relative;
     overflow: hidden;
 }
 
 .my-btn::after,
-.my-btn-sm::after{
+.my-btn-sm::after {
     content: '';
     width: 100%;
-    height: 0;
+    height: 100%;
     background-color: #363030;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 2;
-    transition: .2s linear;
-    transform: translateY(-32px);
+    transition: transform .8s linear, background .3s linear;
+    transform: translateY(-55px);
 }
-.my-btn span,.my-btn-sm span{
+
+.my-btn span,
+.my-btn-sm span {
     position: relative;
     z-index: 4;
 }
+
 .my-btn:hover::after,
-.my-btn-sm:hover::after{
-    height: 100%;
-    transform: translateY(0px);
-    transition: .15s linear;
-}
-.my-btn:focus,.my-btn:active{
-    outline: 3px solid rgba(255, 0, 0, 0.439);
+.my-btn-sm:hover::after {
+    transform: translateY(49px);
+    transition: transform .8s linear;
 }
 
-.my-btn.my-btn-fill{
+.my-btn:focus,
+.my-btn:active {
+    outline: 4px solid #b3b2b261;
+}
+
+.my-btn.my-btn-fill {
     background-color: #201919;
     color: var(--white);
 }
-.my-btn.my-btn-pill{
+
+.my-btn.my-btn-pill {
     border-radius: var(--radius-pill);
     padding: 13px 26px;
 }
 
-.my-btn.my-btn-outline{
+.my-btn.my-btn-outline {
     border: 1px solid var(--white-off);
 }
-.my-btn.my-btn-sm{
-    padding:7px 12px;
+
+.my-btn.my-btn-sm {
+    padding: 9px 12px;
     font-size: var(--fs-sm);
 }
-.my-btn.my-btn-full{
-    width:100%;
+
+.my-btn.my-btn-full {
+    width: 100%;
 }
 
-/*___________||  Input Start Here  ||___________ */
+
+
+
+
+
+
+/*_______________________________*\
+  ||     Input  Start Here     ||
+\*_______________________________*/
 .my-input-group {
     position: relative;
     margin: 5px 0;
 }
 
 .my-input-group input {
-    padding: 11px 14px;
+    padding: 12px 14px;
     border: 1px solid #f2f2f2;
     outline: none;
     border-radius: 4px;
@@ -252,7 +294,7 @@ body {
 }
 
 .my-input-group input:focus {
-    outline: 3px solid #b3b2b27c;
+    outline: 4px solid #b3b2b261;
     padding-left: 20px;
 }
 
@@ -286,7 +328,9 @@ body {
 }
 
 
-/*___________||  Video Play Animation Start Here  ||___________ */
+/*_____________________________________________*\
+  ||     Video Play animation Start Here     ||
+\*_____________________________________________*/
 .my-video {
     background-color: wheat;
     width: 400px;
@@ -380,7 +424,9 @@ body {
 
 
 
-/*___________||  Modal Start Here  ||___________ */
+/*_____________________________*\
+  ||     Modal Start Here     ||
+\*______________________________*/
 .my-modal {
     position: fixed;
     top: 0;
@@ -470,8 +516,9 @@ body {
 
 
 
-
-/*___________||  Scrollbar Start Here  ||___________ */
+/*_________________________________*\
+  ||     Scrollbar Start Here     ||
+\*__________________________________*/
 .my-has-scrollbar::-webkit-scrollbar {
     width: 0px;
     height: 0px;
@@ -494,4 +541,194 @@ body {
 
 .my-has-scrollbar::-webkit-scrollbar-thumb:hover {
     background: var(--gray);
+}
+
+
+
+
+/*______________________________________*\
+  ||    Menu Icon Create Start     ||
+\*______________________________________*/
+.menu-icon {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 20px;
+    cursor: pointer;
+}
+
+.menu-icon span {
+    display: block;
+    height: 3px;
+    width: 100%;
+    background-color: #333;
+    border-radius: 2px;
+    transition: all 0.3s ease;
+}
+
+/* Add animation when active */
+.menu-icon.active span:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+}
+
+.menu-icon.active span:nth-child(2) {
+    opacity: 0;
+}
+
+.menu-icon.active span:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+}
+
+
+
+
+
+/*______________________________________*\
+  ||     Component Responsive Start     ||
+\*______________________________________*/
+@media(max-width:991px) {}
+
+
+@media(max-width:767px) {
+    .my-card {
+        padding: 12px;
+    }
+
+    /* button */
+    .my-btn {
+        padding: 10px 14px;
+    }
+
+    .my-btn.my-btn-pill {
+        padding: 10px 20px;
+    }
+}
+
+
+
+
+
+/*______________________________________*\
+  ||     Checkbox and Radio Input     ||
+\*______________________________________*/
+input[type="checkbox"],
+input[type="radio"] {
+    width: 26px;
+    height: 26px;
+    appearance: none;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    display: inline-block;
+    /* margin: 5px; */
+    outline: none;
+    cursor: pointer;
+    position: relative;
+    transition: background-color 0.3s, border-color 0.3s;
+}
+
+/* Hover Effect */
+input[type="checkbox"]:hover,
+input[type="radio"]:hover {
+    border-color: var(--primary-hover-color);
+}
+
+input[type="radio"] {
+    border-radius: 50%;
+}
+
+/* Checked State with Checkmark for Checkbox */
+input[type="checkbox"]:checked {
+    background-color: var(--primary-hover-color);
+    border-color: var(--primary-hover-color);
+}
+
+input[type="checkbox"]:checked::after {
+    content: '✔';
+    /* Checkmark symbol */
+    color: var(--white);
+    font-size: 18px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+/* Checked State for Radio */
+input[type="radio"]:checked {
+    background-color: var(--primary-hover-color);
+    border-color: var(--primary-hover-color);
+}
+
+input[type="radio"]:checked::after {
+    content: '';
+    width: 14px;
+    height: 14px;
+    background-color: var(--white);
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+input[type="radio"]:focus,
+input[type="checkbox"]:focus {
+    outline: 3px solid #c5c3c36e;
+}
+
+
+
+/*_____________________________________*\
+  ||     My Dropdown Start Here      ||
+\*_____________________________________*/
+.my-dropdown-parent {
+    cursor: pointer;
+    position: relative;
+    padding: 4px 0;
+}
+
+.my-dropdown {
+    position: absolute;
+    background-color: var(--white);
+    padding: 10px 19px;
+    padding-left: 14px;
+    border-radius: 6px;
+    z-index: 4;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    opacity: 0;
+    top: 20px;
+    left: -45px;
+    transition: .2s linear;
+    transform: translateY(22px);
+    max-height: 0px;
+    min-width: 120px;
+}
+
+.my-dropdown input[type='radio'] {
+    width: 20px;
+    height: 20px;
+}
+
+input[type="radio"]:checked::after {
+    width: 10px;
+    height: 10px;
+}
+
+.my-dropdown li,
+.my-dropdown a {
+    display: flex;
+    align-items: start;
+    justify-content: flex-start;
+    gap: 5px;
+}
+
+/* hover */
+.my-dropdown-parent:hover .my-dropdown {
+    display: flex;
+    opacity: 1;
+    top: 6px;
+    max-height: 1000px;
 }
