--- a/Static/Css/pages/home.css
+++ b/Static/Css/pages/home.css
@@ -1,3 +1,6 @@
+/**************************
+****  Header Start Here  ****
+***************************/
 header .header-top {
     background-color: var(--white-off);
     padding: 6px 0;
@@ -131,6 +134,8 @@ header .header-top .left a:hover {
 .header-bottom .all-department-btn {
     background-color: var(--primary-color);
     color: var(--white);
+    padding: 13px 18px;
+    font-size: var(--fs-lg);
 }
 
 .header-bottom .all-department-btn i {
@@ -167,20 +172,196 @@ header .header-top .left a:hover {
 .header-bottom .my-nav-item:hover::after,
 .header-bottom .my-nav-item.active::after {
     opacity: 1;
-    width: 12px;
-    height: 12px;
+    width: 10px;
+    height: 10px;
 }
 
 
-
-.header-bottom .discount-btn {
-    background-color: var(--secondary-color);
-    color: var(--white);
-    position: relative;
-}
-
-.btn-parent {
+.header-bottom .btn-parent {
     padding: 2px;
     outline: 1px solid var(--border-color);
     border-radius: 55px;
 }
+
+/*******************************
+****   Header Cart End Here   ****
+*******************************/
+
+
+
+
+
+
+
+/**********************************
+****   Shopping Cart Start Here   ****
+***********************************/
+.my-modal.shopping-cart {
+    justify-content: end;
+    right: 0%;
+    transform: translateX(100%);
+    transition: transform .3s linear;
+    display: flex;
+}
+
+.my-modal.shopping-cart .modal-content {
+    position: fixed;
+    top: 0;
+    right: 0%;
+    transform: translateX(100%);
+    min-height: 100dvh;
+    width: 540px;
+    max-width: 1000px;
+    border-radius: 0;
+    transition: transform .5s linear;
+}
+
+/* active class added */
+.my-modal.shopping-cart.active {
+    transform: translateX(0%);
+}
+
+.my-modal.shopping-cart.active .modal-content {
+    right: 0;
+    transition: transform .3s linear;
+    transform: translateX(0%);
+}
+
+/* shoping cart body */
+.my-modal.shopping-cart .modal-body {
+    min-height: calc(100dvh - 170px);
+    height: 100%;
+    display: flex;
+    align-items: start;
+}
+
+.my-modal.shopping-cart .body-content {
+    width: 100%;
+    flex-direction: column;
+    padding: 5px 12px;
+    min-height: calc(100% - 170px);
+    display: flex;
+    justify-content: start;
+}
+
+
+/* shopping cart items */
+.my-modal.shopping-cart .item {
+    border-bottom: 1px solid var(--border-color);
+    padding: 8px 0;
+}
+
+.my-modal.shopping-cart .img img {
+    padding: 2px;
+    width: 65px;
+    border: 1px solid var(--white-off);
+    border-radius: 4px;
+}
+
+.my-modal.shopping-cart .items a:hover,
+.my-modal.shopping-cart .items button:hover {
+    color: var(--primary-color)
+}
+
+.my-modal.shopping-cart .items p {
+    line-height: 14px;
+}
+
+
+/* quantity-buttons */
+.my-modal.shopping-cart .quantity-buttons {
+    border: 3px solid var(--white-off);
+}
+
+.my-modal.shopping-cart .quantity-buttons input {
+    width: 35px;
+    height: 34px;
+    text-align: center;
+    border-radius: 0;
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: var(--white);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0px;
+}
+
+.my-modal.shopping-cart .quantity-buttons input[type="number"] {
+    padding-left: 10px;
+    padding-right: 0;
+}
+
+.my-modal.shopping-cart .quantity-buttons input[type="button"] {
+    cursor: pointer;
+    font-size: var(--fs-lg);
+    font-weight: var(--fw-600);
+}
+
+.my-modal.shopping-cart .quantity-buttons input[type="button"]:hover {
+    color: var(--primary-color);
+}
+
+.my-modal.shopping-cart .quantity-buttons input[type="button"]:active {
+    background-color: var(--border-color2);
+}
+
+.my-modal.shopping-cart .item .right {
+    gap: 25px;
+}
+
+/* price area */
+.my-modal.shopping-cart .price {
+    width: 75px;
+    display: flex;
+    align-items: end;
+}
+
+.my-modal.shopping-cart .new-price h6 {
+    font-size: var(--fs-md);
+}
+
+.my-modal.shopping-cart .new-price i {
+    color: var(--secondary-color);
+    font-size: var(--fs-sm);
+}
+
+.my-modal.shopping-cart .modal-content::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    background-color: var(--white-off);
+    width: 12px;
+    height: 100%;
+    left: 0;
+}
+
+.my-modal.shopping-cart .header,
+.my-modal.shopping-cart .footer {
+    padding: 16px 14px;
+}
+
+.my-modal.shopping-cart .footer {
+    min-height: 70px;
+}
+
+.my-modal.shopping-cart .modal-close-btn {
+    font-size: var(--fs-xl);
+    background-color: var(--primary-color);
+    border-radius: 0;
+    color: var(--white-off);
+}
+
+/**********************************
+****   Shopping Cart End Here   ****
+***********************************/
+
+
+
+
+
+
+
+/**************************
+****  Footer Start Here  ****
+***************************/
