--- a/Static/Css/variable.css
+++ b/Static/Css/variable.css
@@ -10,7 +10,7 @@
     /*______  Color  ______ */
     --primary-color: #0aad0a;
     --primary-hover-color: #099309;
-    --secondary-color: #001E2B;
+    --secondary-color: #01293a;
     --orange: #ffc107;
     --blue: #016bf8;
     --gray: #7c7c7c;
@@ -19,6 +19,7 @@
     --white: #fff;
     --white-off: #F0F3F2;
     --border-color: #ededed;
+    --border-color2: #c7c7c7;
     --red: red;
 
 
@@ -28,7 +29,7 @@
 
 
     /*______  Font Size  ______ */
-    --fs-xs: 11px;
+    --fs-xs: 12px;
     --fs-sm: 14px;
     --fs-md: 15px;
     --fs-lg: 17px;
